# animeflix-anime-downloader

./: Cargo.toml  README.md  anime.py
src/: main.rs
src/config/: constants.rs
src/interact/: cli.rs
src/network/: downloder.rs  mod.rs  send.rs
src/utils/: helpers.rs
