[package]
name = "animeflix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = { version="0.3.28" }
json = "0.12.4"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = {version = "1.32.0",features = ["full"]}
